# concepts_builder

./: .env.example  .gitignore  README.md  add_school_class.py  add_subject.py  boards.py  concepts_builder.py  concepts_uploader.py  config.py  exercise_questions_builder.py  exercise_questions_uploader.py  extract_exercise.py  generate_school_class_id.py  generate_subject_id.py  knowledge-db.py  main.py  migrate_add_uuids.py  pyproject.toml  pytest.ini  school_class.py  solved_examples_builder.py  solved_examples_uploader.py  subject.py  sync_chapter_info.py  test_api.py  transform.md  upload_exercise.py  upload_solved_examples.py  verify_concept_exercise_solved_example.py
.agent/rules/: rules.md
.github/workflows/: test.yml
agents/: __init__.py  base.py  concept_generator.py  exercise_questions_generator.py  solved_examples_generator.py
helper/: json_to_pdf.py  ncert_download.py  test_script.py
knowledge_db_rest/: boards.py  school_classes.py  subjects.py
pipelines/: __init__.py  concept_pipeline.py  pdf_pipeline.py  questions_pipeline.py  upload_pipeline.py
prompts/: __init__.py  cbse_maths.txt  class10_maths.py  hcv_concepts.txt  hcv_exercise.txt  hcv_solved_ex.txt
prompts/cbse/: maths_exercise.txt  maths_solved_eg.txt
schemas/: __init__.py  chapter_to_csv.py  chapter_to_sql.py  concept_schema.py
tests/: conftest.py
utils/: __init__.py  add_uuids_to_existing.py  ncert_download.py  paths.py  prompt_loader.py  uuid_generator.py
verifier/: __init__.py  __main__.py  checkers.py  cli.py  loaders.py  reporting.py  string_utils.py  suggestions.py
(+33 files in other folders)
