[project]
name = "concepts-builder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "google-genai>=1.60.0",
    "pandas>=3.0.0",
    "playwright>=1.58.0",
    "pydantic>=2.12.5",
    "ruff>=0.14.14",
]
